<resources>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_pass">Contraseña</string>
    <string name="recover_pass"><u>Recordar contraseña</u></string>
    <string name="login">Acceder"</string>
    <string name="dont_have_acc">¿No tienes cuenta?</string>
    <string name="create_acc"><u>Crear Cuenta</u></string>
    <string name="confirm_pass">Confirme Contraseña</string>
    <string name="enter_mail">Introduzca su email</string>
    <string name="change_pass">Solicitar cambio de contraseña</string>
    <string name="all"><b>Todos</b></string>
    <string name="gas"><b>Gas 95</b></string>
    <string name="gasoil"><b>Gasoil</b></string>
    <string name="position"><b><u>Filtrar respecto a la distancia de mi ubicación:</u></b></string>
    <string name="onekm"><b>~1 km</b></string>
    <string name="twokm"><b>~2,5 km</b></string>
    <string name="sixkm"><b>~6,5 km</b></string>
    <string name="fuelType"><b><u>Filtrar por tipo de combustible:</u></b></string>
    <string name="cities"><b><u>Filtrar por provincia:</u></b></string>
    <string name="routes"><b><u>Crear ruta:</u></b></string>

    <string name="app_name">GasStations</string>
</resources>