<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tVNormal"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:background="@color/black"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="88dp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/tVMinPrice"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:background="@color/green"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="88dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lLMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tVposition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/position" />

        <RadioGroup
            android:id="@+id/rGPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/r1km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onekm" />

            <RadioButton
                android:id="@+id/r2km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twokm" />

            <RadioButton
                android:id="@+id/r6km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixkm" />
        </RadioGroup>

        <TextView
            android:id="@+id/tVFuels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fuelType" />

        <RadioGroup
            android:id="@+id/rGFuels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rAll"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:checked="true"
                android:onClick="onRadioButton"
                android:text="@string/all" />

            <RadioButton
                android:id="@+id/rGas"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:onClick="onRadioButton"
                android:text="@string/gas" />

            <RadioButton
                android:id="@+id/rGasoil"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:onClick="onRadioButton"
                android:text="@string/gasoil" />
        </RadioGroup>

        <TextView
            android:id="@+id/tVCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cities" />

        <Spinner
            android:id="@+id/spCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tVRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/routes" />

        <ImageButton
            android:id="@+id/bRoute"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:gravity="center"
            app:srcCompat="@drawable/icon_route32x32"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/bSearch"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:gravity="center"
            app:srcCompat="@drawable/icon_search40x40"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/bClear"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="left|bottom"
        android:background="@color/light_gray"
        android:gravity="left|bottom"
        app:srcCompat="@drawable/icon_delete50x50"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/bMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:background="@color/light_gray"
        android:gravity="left|top"
        app:srcCompat="@drawable/icon_menu40x40"
        tools:ignore="SpeakableTextPresentCheck" />
</FrameLayout>